--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -9,71 +9,117 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/btnExit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Exit"></Button>
-
     <androidx.core.widget.NestedScrollView
         android:id="@+id/sv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.dashboard.PostDetailDialogFragment">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <RelativeLayout
-                android:id="@+id/location"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:orientation="vertical"></RelativeLayout>
-
-            <TextView
-                android:id="@+id/tvItemName"
-                android:layout_width="match_parent"
+            <Button
+                android:id="@+id/btnExit"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="18dp"
-                android:text="TextView"
-                android:textAlignment="center"
-                android:textSize="30sp" />
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="0dp"
+                android:layout_marginRight="0dp"
+                android:background="@android:color/transparent"
+                android:backgroundTint="@android:color/transparent"
+                android:outlineAmbientShadowColor="@android:color/transparent"
+                android:outlineSpotShadowColor="@android:color/transparent"
+                android:text="X"
+                android:textColor="#0B0A0A"
+                android:textStyle="bold"></Button>
 
+            <ImageView
+                android:id="@+id/ivProfile"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                tools:srcCompat="@tools:sample/avatars" />
 
-            <TextView
-                android:id="@+id/tvAddress"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
+                android:layout_height="match_parent"
                 android:layout_alignParentEnd="true"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="18dp"
-                android:text="TextView"
-                android:textAlignment="center"
-                android:textSize="18sp" />
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="-3dp"
+                android:layout_marginBottom="1dp"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tvNotes"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
-                android:text="TextView"
-                android:textAlignment="center"
-                android:textSize="14sp" />
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tvItemName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="17dp"
+                    android:layout_marginEnd="0dp"
+                    android:text="TextView"
+                    android:textAlignment="center"
+                    android:textSize="24sp" />
 
-            <RelativeLayout
-                android:id="@+id/rvImages"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:layout_marginTop="50dp"
-                android:orientation="vertical"></RelativeLayout>
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tvAddress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="25dp"
+                    android:drawableStart="@drawable/ic_baseline_location_on_24"
+                    android:text="TextView"
+                    android:textAlignment="center"
+                    android:textSize="18sp" />
 
-        </LinearLayout>
+                <RelativeLayout
+                    android:id="@+id/location"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:orientation="vertical">
+
+                </RelativeLayout>
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tvNotes"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"
+                    android:text="TextView"
+                    android:textAlignment="center"
+                    android:textSize="14sp" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tvDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"
+                    android:text="TextView"
+                    android:textAlignment="center"
+                    android:textSize="14sp" />
+
+
+                <RelativeLayout
+                    android:id="@+id/rvImages"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="50dp"
+                    android:layout_marginBottom="25dp"
+                    android:orientation="vertical"></RelativeLayout>
+
+            </LinearLayout>
+        </RelativeLayout>
 
     </androidx.core.widget.NestedScrollView>
 </com.google.android.material.card.MaterialCardView>
