--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -63,8 +63,10 @@
                     android:layout_marginStart="0dp"
                     android:layout_marginTop="17dp"
                     android:layout_marginEnd="0dp"
+                    android:fontFamily="@font/roboto"
                     android:text="TextView"
                     android:textAlignment="center"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                     android:textSize="24sp" />
 
                 <com.google.android.material.textview.MaterialTextView
@@ -81,6 +83,7 @@
                     android:drawableStart="@drawable/ic_baseline_location_on_24"
                     android:text="TextView"
                     android:textAlignment="center"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                     android:textSize="18sp" />
 
                 <RelativeLayout
@@ -88,16 +91,34 @@
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
                     android:orientation="vertical">
-
                 </RelativeLayout>
+
+                <LinearLayout
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <ImageButton
+                        android:id="@+id/btnLike"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:backgroundTint="#FFFFFF"
+                        android:src="@drawable/ic_baseline_favorite_border_24"
+                        tools:visibility="visible">
+
+                    </ImageButton>
+                </LinearLayout>
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tvNotes"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="25dp"
+                    android:fontFamily="@font/roboto"
                     android:text="TextView"
                     android:textAlignment="center"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                     android:textSize="14sp" />
 
                 <com.google.android.material.textview.MaterialTextView
@@ -105,8 +126,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="25dp"
+                    android:fontFamily="@font/roboto"
                     android:text="TextView"
                     android:textAlignment="center"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                     android:textSize="14sp" />
 
 
