--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -35,13 +35,14 @@
                 android:textColor="#0B0A0A"
                 android:textStyle="bold"></Button>
 
-            <ImageView
+            <ImageButton
                 android:id="@+id/ivProfile"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
+                android:background="@android:color/transparent"
                 tools:srcCompat="@tools:sample/avatars" />
 
             <LinearLayout
