--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-    <TextView
+    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/tvSpinnerItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="hello world" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
