--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -63,6 +63,7 @@
                     android:layout_gravity="center"
                     android:layout_marginStart="0dp"
                     android:layout_marginTop="20dp"
+                    android:layout_marginLeft="50dp"
                     android:layout_marginEnd="0dp"
                     android:fontFamily="@font/roboto"
                     android:text="TextView"
@@ -120,6 +121,7 @@
                     android:text="TextView"
                     android:textAlignment="center"
                     android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                    android:layout_margin="4dp"
                     android:textSize="14sp" />
 
                 <com.google.android.material.textview.MaterialTextView
