--- a/app/src/main/res/layout/fragment_new_post.xml
+++ b/app/src/main/res/layout/fragment_new_post.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:layout_width="wrap_content">
 
     <ImageView
         android:id="@+id/ivNewImage"
@@ -12,4 +11,5 @@
         android:layout_height="100dp"
         android:layout_weight="1"
         tools:srcCompat="@tools:sample/avatars" />
+
 </LinearLayout>
