--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -27,6 +27,7 @@
         android:layout_marginEnd="0dp"
         android:layout_toEndOf="@+id/ivImage"
         android:text="TextView"
+        android:textColor="#1E1C1C"
         android:textSize="24sp" />
 
     <TextView
@@ -39,8 +40,9 @@
         android:layout_marginStart="34dp"
         android:layout_marginTop="59dp"
         android:layout_marginEnd="9dp"
-        android:drawableStart="@drawable/ic_baseline_location_on_24"
         android:layout_toEndOf="@+id/ivImage"
-        android:text="TextView" />
+        android:drawableStart="@drawable/ic_baseline_location_on_24"
+        android:text="TextView"
+        android:textColor="#1E1C1C" />
 
 </RelativeLayout>
