--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -62,13 +62,14 @@
                     android:layout_alignParentEnd="true"
                     android:layout_gravity="center"
                     android:layout_marginStart="0dp"
-                    android:layout_marginTop="20dp"
                     android:layout_marginLeft="50dp"
+                    android:layout_marginTop="20dp"
                     android:layout_marginEnd="0dp"
                     android:fontFamily="@font/roboto"
                     android:text="TextView"
                     android:textAlignment="center"
                     android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                    android:textColor="#1E1C1C"
                     android:textSize="20sp" />
 
                 <com.google.android.material.textview.MaterialTextView
@@ -86,6 +87,7 @@
                     android:text="TextView"
                     android:textAlignment="center"
                     android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                    android:textColor="#1E1C1C"
                     android:textSize="14sp" />
 
                 <RelativeLayout
