--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -80,9 +80,9 @@
                     android:layout_alignParentEnd="true"
                     android:layout_gravity="center"
                     android:layout_marginStart="10dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="30dp"
                     android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="25dp"
+                    android:layout_marginBottom="15dp"
                     android:drawableStart="@drawable/ic_baseline_location_on_24"
                     android:text="TextView"
                     android:textAlignment="center"
@@ -137,6 +137,37 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                     android:textSize="14sp" />
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginTop="20dp">
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:gravity="center"
+                        android:layout_gravity="center"
+                        android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/roboto_black"
+                        android:text="Tags:"
+                        android:textStyle="bold"></TextView>
+                    </RelativeLayout>
+
+                    <com.google.android.material.chip.ChipGroup
+                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:id="@+id/tag_chips"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        app:singleSelection="false">
+                    </com.google.android.material.chip.ChipGroup>
+
+                </LinearLayout>
 
                 <RelativeLayout
                     android:id="@+id/rvImages"
