--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#577590</color>
     <color name="colorPrimaryDark">#F94144</color>
     <color name="colorAccent">#F94144</color>
+    <color name="white">#FFFFFF</color>
 </resources>
